--- a/src/client/js/home/Home.html
+++ b/src/client/js/home/Home.html
@@ -144,7 +144,8 @@
                                         <p>
                                             <span>{{site.address.addressLine2}}</span>
                                         </p>
-                                        <p>{{site.phone}}</p>
+                                        <br/>
+                                        <p><a href="tel:{{site.phone}}">{{site.phone}}</a></p>
                                         <p>&nbsp;</p>
                                         <p class="secondary">With bus service to
                                             <span>{{site.schools.length}}</span> school<span ng-show="site.schools.length > 1">s</span>
