reorg'd the folder structure. Added pages.

--- a/src/client/index2.html
+++ b/src/client/index2.html
@@ -82,17 +82,11 @@
     <script src="js/data/school.data.js"></script>
     <script src="js/data/site.data.js"></script>
 
-    <!-- App - Shell -->
-    <script src="js/layout/shell.controller.js"></script>
-
-
-    <!-- App - Home -->
-    <script src="js/home/_home.module.js"></script>
-    <script src="js/home/home.controller.js"></script>
-
-    <!-- App - Site  (Daycare Sites) -->
-    <script src="js/site/_site.module.js"></script>
-    <script src="js/site/site.controller.js"></script>
+    <!-- App - Pages -->
+    <script src="js/pages/_pages.module.js"></script>
+    <script src="js/pages/layout/shell.controller.js"></script>
+    <script src="js/pages/home/home.controller.js"></script>
+    <script src="js/pages/site-details/site-details.controller.js"></script>
     <!-- endbuild -->
 </body>
 
