--- a/src/client/index2.html
+++ b/src/client/index2.html
@@ -58,7 +58,7 @@
     <!-- Vendor Libs -->
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
-    <!-- <script src="lib/angular-animate/angular-animate.js"></script> -->
+    <script src="lib/angular-animate/angular-animate.js"></script>
     <script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="lib/toastr/toastr.js"></script>
     <script src="lib/moment/moment.js"></script>
@@ -75,6 +75,10 @@
     <!--core-->
     <script src="js/core/_core.module.js"></script>
     <script src="js/core/datacontext.js"></script>
+
+    <!--directives-->
+    <script src="js/directives/_directives.module.js"></script>
+    <script src="js/directives/rdn-banner-message.js"></script>
 
     <!-- App data -->
     <script src="js/data/_data.module.js"></script>
