Restructured the announcement and added it to P5 site details.

--- a/src/client/js/pages/home/home.html
+++ b/src/client/js/pages/home/home.html
@@ -1,5 +1,5 @@
 <!-- BANNER MESSAGE -->
-<rdn-banner-message message="vm.messages.banner"></rdn-banner-message>
+<rdc-banner-message data="vm.messages.banner"></rdc-banner-message>
 <!-- MAIN BANNER -->
 <div class="container main-banner" ng-class="{'has-banner-message' : vm.messages.banner.summary}">
     <div class="banner-image"></div>
