--- a/src/client/js/directives/controls/rdc-banner-message.html
+++ b/src/client/js/directives/controls/rdc-banner-message.html
@@ -1,3 +1,3 @@
-<div class="container banner-message" ng-if="message">
-    <a id="banner-message-toggle" ng-click="showDetails()"><label>Announcements:</label> {{message.summary}}</a>
+<div class="container banner-message" ng-if="data.summary">
+    <a ng-href="{{data.targetUrl}}"><label>Announcements:</label> {{data.summary}}</a>
 </div>
