--- a/src/client/js/pages/home/home.html
+++ b/src/client/js/pages/home/home.html
@@ -2,7 +2,7 @@
 <rdc-banner-message data="vm.messages.banner"></rdc-banner-message>
 <!-- MAIN BANNER -->
 <div class="container main-banner" ng-class="{'has-banner-message' : vm.messages.banner.summary}">
-    <div class="banner-image"></div>
+    <img class="banner-image" src="/img/rainbow-lg.png">
     <div class="title">
         <h1>
             <span class="emphasis">Rainbow</span>
