Ref'd fonts locally, nav restructing, added site.list.less

--- a/src/client/index2.html
+++ b/src/client/index2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html data-ng-app="app">
 
 <head>
@@ -37,7 +37,7 @@
     <link href="css/site.css" rel="stylesheet" />
     <!-- endbuild -->
 
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:600,400,300|Roboto:400,500,700" rel="stylesheet" type="text/css">
+    <!--<link href="http://fonts.googleapis.com/css?family=Open+Sans:600,400,300|Roboto:400,500,700" rel="stylesheet" type="text/css">-->
 
 </head>
 
@@ -81,7 +81,8 @@
     <!--directives-->
     <script src="js/directives/_directives.module.js"></script>
     <script src="js/directives/behaviors/rdc-collapse.js"></script>
-    <script src="js/directives/controls/rdc-banner-message.js"></script>
+<script src="js/directives/controls/rdc-banner-message.js"></script>
+    <script src="js/directives/controls/rdc-hamburger-menu.js"></script>
     <script src="js/directives/controls/rdc-popover-message.js"></script>
     <script src="js/directives/dynamic-controls/popover-message.service.js"></script>
 
