--- a/src/client/index2.html
+++ b/src/client/index2.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"/>
+    <link rel="shortcut icon" href="/img/favicon.ico?v=0.83" />
     <title>Rainbow Day Nursery</title>
     <style>
         /* This helps the ng-show/ng-hide animations start at the right place. */
