--- a/src/client/index2.html
+++ b/src/client/index2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
     <link rel="shortcut icon" href="/img/favicon.ico?v=0.83" />
     <title>Rainbow Day Nursery</title>
     <style>
@@ -27,13 +27,12 @@
     </style>
 
     <!--    <link rel="shortcut icon" href="/server/ccfavicon.ico" />-->
-    <!-- build:css styles/lib.css -->
-    <link href="lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
-    <link href="lib/font-awesome/css/font-awesome.css" rel="stylesheet" />
-    <link href="lib/toastr/toastr.css" rel="stylesheet" />
+    <!-- build:css css/lib.css -->
+    <link href="/src/client/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
+    <link href="/src/client/lib/font-awesome/css/font-awesome.css" rel="stylesheet" />
     <!-- endbuild -->
-    <!-- build:css styles/app.css-->
-    <link href="css/site.css" rel="stylesheet" />
+    <!-- build:css css/app.css-->
+    <link href="/src/client/css/site.css" rel="stylesheet" />
     <!-- endbuild -->
     <!--<link href="http://fonts.googleapis.com/css?family=Open+Sans:600,400,300|Roboto:400,500,700" rel="stylesheet" type="text/css">-->
 
@@ -46,8 +45,8 @@
     </p>
     <![endif]-->
     <!--[if lt IE 9]>
-    <script src="lib/es5-shim/es5-shim.js"></script>
-    <script src="lib/json3/lib/json3.min.js"></script>
+    <script src="/src/client/lib/es5-shim/es5-shim.js"></script>
+    <script src="/src/client/lib/json3/lib/json3.min.js"></script>
     <![endif]-->
 
     <div ui-view="shell"></div>
@@ -55,47 +54,51 @@
     <div>
         <!-- build:js js/lib.js -->
         <!-- Vendor Libs -->
-        <script src="lib/jquery/dist/jquery.js"></script>
-        <script src="lib/angular/angular.js"></script>
-        <script src="lib/angular-sanitize/angular-sanitize.js"></script>
-        <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
-        <script src="lib/angular-animate/angular-animate.js"></script>
-        <script src="lib/bootstrap/dist/js/bootstrap.js"></script>
-        <script src="lib/bootstrap-modal-popover/src/bootstrap-modal-popover.js"></script>
-        <script src="lib/toastr/toastr.js"></script>
-        <script src="lib/moment/moment.js"></script>
-        <script src="lib/underscore/underscore.js"></script>
-        <script src="lib/angular-scroll/angular-scroll.js"></script>
+        <script src="/src/client/lib/jquery/dist/jquery.js"></script>
+        <script src="/src/client/lib/angular/angular.js"></script>
+        <script src="/src/client/lib/angular-sanitize/angular-sanitize.js"></script>
+        <script src="/src/client/lib/angular-ui-router/release/angular-ui-router.js"></script>
+        <script src="/src/client/lib/angular-animate/angular-animate.js"></script>
+        <script src="/src/client/lib/bootstrap/dist/js/bootstrap.js"></script>
+        <script src="/src/client/lib/bootstrap-modal-popover/src/bootstrap-modal-popover.js"></script>
+        <script src="/src/client/lib/toastr/toastr.js"></script>
+        <script src="/src/client/lib/moment/moment.js"></script>
+        <script src="/src/client/lib/underscore/underscore.js"></script>
+        <script src="/src/client/lib/angular-scroll/angular-scroll.js"></script>
         <!-- endbuild -->
         <!-- build:js js/app.js-->
         <!-- Bootstrapping -->
-        <script src="js/_app.module.js"></script>
-        <script src="js/config.route.js"></script>
+        <script src="/src/client/js/_app.module.js"></script>
+        <script src="/src/client/js/config.route.js"></script>
 
         <!--core-->
-        <script src="js/core/_core.module.js"></script>
-        <script src="js/core/common.service.js"></script>
-        <script src="js/core/datacontext.js"></script>
+        <script src="/src/client/js/core/_core.module.js"></script>
+        <script src="/src/client/js/core/common.service.js"></script>
+        <script src="/src/client/js/core/datacontext.js"></script>
 
         <!--directives-->
-        <script src="js/directives/_directives.module.js"></script>
-        <script src="js/directives/behaviors/rdc-collapse.js"></script>
-        <script src="js/directives/controls/rdc-banner-message.js"></script>
-        <script src="js/directives/controls/rdc-hamburger-menu.js"></script>
-        <script src="js/directives/controls/rdc-popover-message.js"></script>
-        <script src="js/directives/dynamic-controls/popover-message.service.js"></script>
+        <script src="/src/client/js/directives/_directives.module.js"></script>
+        <script src="/src/client/js/directives/behaviors/rdc-collapse.js"></script>
+        <script src="/src/client/js/directives/controls/rdc-banner-message.js"></script>
+        <script src="/src/client/js/directives/controls/rdc-hamburger-menu.js"></script>
+        <script src="/src/client/js/directives/controls/rdc-popover-message.js"></script>
+        <script src="/src/client/js/directives/dynamic-controls/popover-message.service.js"></script>
 
         <!-- App data -->
-        <script src="js/data/_data.module.js"></script>
-        <script src="js/data/message.data.js"></script>
-        <script src="js/data/school.data.js"></script>
-        <script src="js/data/site.data.js"></script>
+        <script src="/src/client/js/data/_data.module.js"></script>
+        <script src="/src/client/js/data/message.data.js"></script>
+        <script src="/src/client/js/data/school.data.js"></script>
+        <script src="/src/client/js/data/site.data.js"></script>
 
         <!-- App - Pages -->
-        <script src="js/pages/_pages.module.js"></script>
-        <script src="js/pages/layout/shell.controller.js"></script>
-        <script src="js/pages/home/home.controller.js"></script>
-        <script src="js/pages/site-details/site-details.controller.js"></script>
+        <script src="/src/client/js/pages/_pages.module.js"></script>
+        <script src="/src/client/js/pages/layout/shell.controller.js"></script>
+        <script src="/src/client/js/pages/home/home.controller.js"></script>
+        <script src="/src/client/js/pages/site-details/site-details.controller.js"></script>
+
+        <!-- Placeholder for injected HTML templates during 'gulp dist' -->
+        <!-- inject:js -->
+        <!-- endinject -->
         <!-- endbuild -->
     </div>
 </body>
