dist gulp task working.

--- a/src/client/index2.html
+++ b/src/client/index2.html
@@ -34,7 +34,7 @@
     <!-- build:css css/app.css-->
     <link href="/src/client/css/site.css" rel="stylesheet" />
     <!-- endbuild -->
-    <!--<link href="http://fonts.googleapis.com/css?family=Open+Sans:600,400,300|Roboto:400,500,700" rel="stylesheet" type="text/css">-->
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:600,400,300|Roboto:400,500,700" rel="stylesheet" type="text/css">
 
 </head>
 
